website/src/Icon.scss
div#icon a#back {
    color: white;
    margin-left: 10px;
}

label {
    user-select: none
}

label input,
label select {
    margin-left: 10px;
}

div#iconoptions {
    float: left;
    background-color: rgba(0, 0, 0, 0.25);
    padding-top: 10px;
    padding-right: 15px;
    position: absolute;
    bottom: 0px;
}

div button {
    color: black;
}

div input[type="color"] {
    height: 19px;
}

code {
    margin: 15px;
    font-size: 1.2em !important;
}

